# kiku

./: .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  jsconfig.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js
.claude/: preferences.md  settings.local.json
scripts/: create-icon.js  prepare-dist.js
src/: App.css  App.jsx  App.tsx  index.css  main.js  main.jsx  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs  vad.rs  voice_commands.rs  whisper.rs
src/components/: Settings.tsx
src/hooks/: useWebSpeechAPI.ts
src/store/: useKikuStore.ts
